Uploaded image for project: 'Log4cxx'
  1. Log4cxx
  2. LOGCXX-300

ODBCAppender connection settings broken (or just half changed)

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 0.11.0
    • None
    • Appender
    • None
    • Debian Linux (Lenny) using unixODBC

    Description

      The ODBCAppender has been changed to use SQLDriverConnectW. In the process, the configuration parameters for username, password, and url have been lost.

      The strings need to be concatendated as "DSN=" + databaseURL + ";User=" + databaseUser + ";Password=" + databasePassword + ";"

      Or was it intended to make the user construct the connection string?

      Attachments

        Activity

          People

            carnold@apache.org Curt Arnold
            sunergos Matthew Vernon
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: