LOGCXX-300: ODBCAppender connection settings broken (or just half changed)